# robotsix_agents

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: README_CONFIG.md
robotsix_agents/: __init__.py
robotsix_agents/agent_defaults/: README.md  calendar.yaml  github.yaml  interaction_memory.yaml  orchestrator.yaml  repository_team.yaml
robotsix_agents/calendar_task/: __init__.py  agent.py  tools.py
robotsix_agents/core/: __init__.py  config_manager.py
robotsix_agents/core/config/: __init__.py  agent_defaults.py  client_factory.py  exceptions.py  file_manager.py  manager.py  models.py  validator.py
robotsix_agents/github/: __init__.py  agent.py
robotsix_agents/interaction_memory/: __init__.py  agent.py
robotsix_agents/orchestrator/: __init__.py  agent.py  cli.py  config.py
robotsix_agents/repository_team/: __init__.py  agent.py
robotsix_agents/repository_team/coding_specialist/: README.md  __init__.py  agent.py
robotsix_agents/repository_team/git/: README.md  __init__.py  agent.py
robotsix_agents/repository_team/parser/: __init__.py  agent.py  tools.py
robotsix_agents/repository_team/repository_specialist/: README_DOCKER_POSTGRES.md  agent.py
robotsix_agents/repository_team/task_organizer/: __init__.py  agent.py  tools.py
tests/: __init__.py
